[feat] 新增撤回功能

--- a/pages/swipe.html
+++ b/pages/swipe.html
@@ -30,7 +30,8 @@
         </div>
 
         <div class="actions">
-            <button id="dislikeBtn" class="ghost-btn">左滑</button>
+            <button id="dislikeBtn" class="ghost-btn ">左滑</button>
+            <button id="undoBtn" class="ghost-btn">撤回</button>
             <button id="likeBtn" class="primary-btn">右滑</button>
         </div>
 
