[feat] 新增功能说明

--- a/pages/index.html
+++ b/pages/index.html
@@ -29,8 +29,16 @@
     <!-- 功能菜单卡片 -->
     <section id="menuCard" class="card hidden">
       <h1>功能列表</h1>
-      <button id="spoinderFeatureBtn" class="primary-btn">Spoinder</button>
-      <button id="shuffleFeatureBtn" class="primary-btn">Shuffle</button>
+
+      <div class="feature-item">
+        <button id="spoinderFeatureBtn" class="primary-btn">Spoinder</button>
+        <p class="feature-desc muted">滑动筛选歌曲，生成新歌单</p>
+      </div>
+
+      <div class="feature-item">
+        <button id="shuffleFeatureBtn" class="primary-btn">Shuffle</button>
+        <p class="feature-desc muted">彻底打乱原歌单顺序</p>
+      </div>
     </section>
 
     <!-- 播放列表卡片 -->
